--- a/composer.json
+++ b/composer.json
@@ -1,51 +1,50 @@
 {
-    "name": "heimrichhannot/contao-api-bundle",
-    "type": "contao-bundle",
-    "description": "A generic API with restricted access to provide access to 3rd party applications.",
-    "license": "LGPL-3.0-or-later",
-    "require": {
-        "php": "^7.4 || ^8.0",
-        "contao/core-bundle": "^4.9",
-        "heimrichhannot/contao-utils-bundle": "^2.214",
-        "firebase/php-jwt": "^4.0 || ^5.0",
-        "symfony/config": "^4.4 || ^5.0",
-        "symfony/translation-contracts": "^1.0 || ^2.0 || ^3.0"
+  "name": "systemcheck/contao-api-bundle",
+  "type": "contao-bundle",
+  "description": "A generic API with restricted access to provide access to 3rd party applications.",
+  "license": "LGPL-3.0-or-later",
+  "version": "1.0.0",
+  "require": {
+    "php": ">=8.0",
+    "contao/core-bundle": "^5.0",
+    "heimrichhannot/contao-utils-bundle": "^3.4"
+  },
+  "require-dev": {
+    "contao/test-case": "1.1",
+    "contao/manager-plugin": "^2.0",
+    "friendsofphp/php-cs-fixer": "^2.2",
+    "phpunit/phpunit": ">=6.0 <6.5",
+    "php-http/guzzle6-adapter": "^1.1",
+    "php-http/message-factory": "^1.0.2",
+    "php-coveralls/php-coveralls": "^2.0",
+    "symfony/phpunit-bridge": "^3.2"
+  },
+  "conflict": {
+    "contao/core": "*",
+    "contao/manager-plugin": "<2.0 || >=3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Systemcheck\\ContaoApiBundle\\": "src/"
     },
-    "require-dev": {
-        "contao/test-case": "1.1",
-        "contao/manager-plugin": "^2.0",
-        "friendsofphp/php-cs-fixer": "^2.2",
-        "phpunit/phpunit": ">=6.0 <6.5",
-        "php-http/guzzle6-adapter": "^1.1",
-        "php-http/message-factory": "^1.0.2",
-        "php-coveralls/php-coveralls": "^2.0",
-        "symfony/phpunit-bridge": "^3.2"
-    },
-    "conflict": {
-        "contao/manager-plugin": "<2.0 || >=3.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "HeimrichHannot\\ApiBundle\\": "src/"
-        },
-        "classmap": [
-            "src/"
-        ],
-        "exclude-from-classmap": [
-            "src/Resources/contao/config/",
-            "src/Resources/contao/dca/",
-            "src/Resources/contao/languages/",
-            "src/Resources/contao/templates/",
-            "doc"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "HeimrichHannot\\ApiBundle\\Test\\": "tests/"
-        }
-    },
-    "extra": {
-        "contao-manager-plugin": "HeimrichHannot\\ApiBundle\\ContaoManager\\Plugin"
+    "classmap": [
+      "src/"
+    ],
+    "exclude-from-classmap": [
+      "src/Resources/contao/config/",
+      "src/Resources/contao/dca/",
+      "src/Resources/contao/languages/",
+      "src/Resources/contao/templates/",
+      "doc"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Systemcheck\\ContaoApiBundle\\Test\\": "tests/"
     }
+  },
+  "extra": {
+    "contao-manager-plugin": "Systemcheck\\ContaoApiBundle\\ContaoManager\\Plugin"
+  }
 }
 
