--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -1,6 +1,8 @@
-huh:
+systemcheck:
   api:
     resources:
       - {name: default, type: resource}
+      - {name: events, type: entity_resource, modelClass: "\\balticworxx\\ContaoFireManagerBundle\\Model\\EventModel", verboseName: events}
+      - {name: foods, type: entity_resource, modelClass: "\\balticworxx\\ContaoFireManagerBundle\\Model\\FoodModel", verboseName: foods}
       - {name: calendar_event, type: entity_resource, modelClass: "\\Contao\\CalendarEventsModel", verboseName: calendar_event}
       - {name: member, type: entity_resource, modelClass: "\\Contao\\MemberModel", verboseName: member}
